[package]
name = "hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features=["derive"]}
serde_json = "1"
serde_repr = "0.1"
tokio = { version = "1", features=["full"]}
chrono = "0.4"
tokio-tungstenite = "0.21"
futures-util = "0.3"

[dev-dependencies]
mockall = "0.12.1"
